--- a/tt/ttapp/static/timetable.html
+++ b/tt/ttapp/static/timetable.html
@@ -1,30 +1,3 @@
-# Ex03 Time Table
-## Date: 21/04/2025
-
-## AIM
-To write a html webpage page to display your slot timetable.
-
-## ALGORITHM
-### STEP 1
-Create a Django-admin Interface.
-
-### STEP 2
-Create a static folder and inert HTML code.
-
-### STEP 3
-Create a simple table using ```<table>``` tag in html.
-
-### STEP 4
-Add header row using ```<th>``` tag.
-
-### STEP 5
-Add your timetable using ```<td>``` tag.
-
-### STEP 6
-Execute the program using runserver command.
-
-## PROGRAM
-```
 <!DOCTYPE html>
 <html>
 <head>
@@ -33,7 +6,7 @@ Execute the program using runserver command.
 <body>
     <IMG SRC="logo.png"HEIGHT="100"WIDTH="750"BORDER=6>
     <h2>Saveetha Engineering College</h2>
-    <h3>SLOT TIME TABLE - YOUR-NAME</h3>
+    <h3>SLOT TIME TABLE - SENTHIL RAJ G (212224100054)</h3>
 
     <table border="1">
         <tr BGCOLOR="YELLOW">
@@ -123,11 +96,3 @@ Execute the program using runserver command.
     </table>
 </body>
 </html>
-```
-
-
-## OUTPUT
-![alt text](<Screenshot (6).png>)
-
-## RESULT
-The program for creating slot timetable using basic HTML tags is executed successfully.
